_sass/pages/_tags.scss
@use '../abstracts/breakpoints' as bp;

.tag {
  border-radius: 0.7em;
  padding: 6px 8px 7px;
  margin-right: 0.8rem;
  line-height: 3rem;
  letter-spacing: 0;
  border: 1px solid var(--tag-border) !important;
  box-shadow: 0 0 3px 0 var(--tag-shadow);

  span {
    margin-left: 0.6em;
    font-size: 0.7em;
    font-family: Oswald, sans-serif;
  }
}

#tags {
  .categories {
    width: 100%;
  }

  .post-tags {
    line-height: 1.8rem;
  }

  .post-tag {
    border-radius: 0.55rem;
    font-size: 0.92rem;
    line-height: 1.2;
    margin: 0 0.42rem 0.5rem 0;
    padding: 0.22rem 0.5rem;
    vertical-align: middle;
  }

  .tag-count {
    font-size: 0.78em;
    margin-left: 0.18rem;
  }

  @include bp.lt(bp.get(lg)) {
    justify-content: stretch !important;
  }
}

